dog breed prediction

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1688,14 +1688,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted                           Correct\n",
+      "--------------------------------------------------------------------\n",
+      "Dalmatian                           Dalmatian\n",
+      "Doberman_pinscher                   Doberman_pinscher\n",
+      "Papillon                            Papillon\n",
+      "Bedlington_terrier                  Bedlington_terrier\n",
+      "Flat-coated_retriever               Flat-coated_retriever\n",
+      "Giant_schnauzer                     Belgian_sheepdog\n",
+      "Canaan_dog                          Canaan_dog\n",
+      "Clumber_spaniel                     Clumber_spaniel\n",
+      "Lakeland_terrier                    Lakeland_terrier\n",
+      "Chow_chow                           Chow_chow\n"
+     ]
+    }
+   ],
    "source": [
-    "### TODO: Write a function that takes a path to an image as input\n",
-    "### and returns the dog breed that is predicted by the model."
+    "### Write a function that takes a path to an image as input\n",
+    "### and returns the dog breed that is predicted by the model.\n",
+    "from extract_bottleneck_features import extract_InceptionV3\n",
+    "\n",
+    "def InceptionV3_predict_breed(img_path):\n",
+    "    # extract bottleneck features\n",
+    "    bottleneck_feature = extract_InceptionV3(path_to_tensor(img_path))\n",
+    "    # obtain predicted vector\n",
+    "    predicted_vector = InceptionV3_model.predict(bottleneck_feature)\n",
+    "    # return dog breed that is predicted by the model\n",
+    "    return dog_names[np.argmax(predicted_vector)]\n",
+    "\n",
+    "# First 10 test results:\n",
+    "max_len=len(max(dog_names, key=len))\n",
+    "print('{0:{max_len}}  {1}\\n{2}'.format('Predicted', 'Correct','-'*max_len*2,max_len=max_len))\n",
+    "for i, img_path in enumerate(test_files[:10]):\n",
+    "    prediction = InceptionV3_predict_breed(img_path)\n",
+    "    label = dog_names[np.argmax(test_targets[i])]\n",
+    "    print('{0:{max_len}}  {1}'.format(prediction, label, max_len=max_len))"
    ]
   },
   {
